<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_main"
    tools:context="apptastic.getpekt.PhoneActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone"
        android:id="@+id/description"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <Button
        android:id="@+id/btnPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_submit"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/bg_register"
        android:textSize="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/country"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/phone"
        android:layout_alignTop="@+id/country"
        android:layout_toRightOf="@+id/country"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/country"
        android:id="@+id/textView"
        android:layout_above="@+id/country"
        android:layout_toLeftOf="@+id/phone"
        android:layout_toStartOf="@+id/phone"
        android:gravity="center"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="+"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/number"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView"
        android:layout_alignRight="@+id/phone"
        android:layout_alignEnd="@+id/phone"
        android:layout_marginRight="76dp"
        android:layout_marginEnd="76dp"
        android:gravity="center" />

</RelativeLayout>
