<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_main"
    tools:context="apptastic.getpekt.CreateActivity"
    android:gravity="center">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/info_icon"
        android:src="@drawable/group"
        android:layout_marginTop="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_name"
        android:layout_alignTop="@+id/info_icon"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/info_icon"
        android:layout_toEndOf="@+id/info_icon"
        android:layout_marginTop="50dp"
        android:singleLine="true"
        android:maxLength="25"
        android:nextFocusDown="@+id/info_day"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/event_icon"
        android:id="@+id/textView4"
        android:layout_above="@+id/info_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_name"
        android:id="@+id/textView5"
        android:layout_alignRight="@+id/info_name"
        android:layout_alignEnd="@+id/info_name"
        android:layout_toEndOf="@+id/info_icon"
        android:gravity="center"
        android:layout_alignBottom="@+id/info_name"
        android:layout_alignLeft="@+id/info_name"
        android:layout_alignStart="@+id/info_name"
        android:layout_marginBottom="50dp" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/info_month"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/info_year"
        android:layout_toStartOf="@+id/info_year"
        android:layout_marginRight="10dp"
        android:nextFocusDown="@+id/info_year"
        android:maxLength="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_date"
        android:id="@+id/textView6"
        android:gravity="center"
        android:layout_below="@+id/info_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/info_day"
        android:inputType="number"
        android:layout_above="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:nextFocusDown="@+id/info_month"
        android:maxLength="2"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/info_year"
        android:inputType="number"
        android:layout_alignTop="@+id/info_month"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:nextFocusDown="@+id/info_hours"
        android:maxLength="4"/>

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/info_month"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_time"
        android:id="@+id/textView10"
        android:layout_below="@+id/info_month"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/info_hours"
        android:layout_alignTop="@+id/info_minutes"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:nextFocusDown="@+id/info_minutes"
        android:maxLength="2"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/info_minutes"
        android:layout_below="@+id/textView10"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:maxLength="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_div"
        android:id="@+id/textView7"
        android:gravity="center"
        android:layout_alignTop="@+id/info_day"
        android:layout_toRightOf="@+id/info_day"
        android:layout_toLeftOf="@+id/info_month"
        android:layout_toStartOf="@+id/info_month" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_div"
        android:id="@+id/textView8"
        android:gravity="center"
        android:layout_alignTop="@+id/textView7"
        android:layout_toLeftOf="@+id/info_year"
        android:layout_toStartOf="@+id/info_year" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_div"
        android:id="@+id/textView9"
        android:gravity="center"
        android:layout_alignTop="@+id/info_hours"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_submit"
        android:text="@string/add_contacts"
        android:textAllCaps="false"
        android:textColor="@color/bg_register"
        android:textSize="15dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
